# jupyterlab-plugin-graph

./: .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.json  package.json  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
binder/: environment.yml  labextensions.txt  postBuild
src/: index.ts  model.ts  widget.tsx
style/: index.css
